tests/failing/test22.tail
let v3:[double]2 = reshape{[double],[1,2]}([10,30],snocV{[double],[49]}(eachV{[int,double],[49]}(i2d,iotaV(49)),3.0)) in
let v5:[double]2 = transp{[double],[2]}(snoc{[double],[1]}(v3,eachV{[int,double],[10]}(i2d,iotaV(10)))) in
let v8:<int>3 = catV{[int],[1,2]}(dropV{[int],[1]}(1,shape{[double],[2]}(v5)),[10,30]) in
let v12:[double]3 = transp2{[double],[3]}([2,1,3],reshape{[double],[2,3]}(v8,v3)) in
let v13:<int>3 = catV{[int],[1,2]}([10],shape{[double],[2]}(v5)) in
let v18:[double]3 = transp2{[double],[3]}([1,3,2],reshape{[double],[2,3]}(v13,v5)) in
let v23:[double]2 = reduce{[double],[2]}(addd,0.0,zipWith{[double,double,double],[3]}(muld,v12,v18)) in
reduce{[double],[0]}(subd,0.0,reduce{[double],[1]}(addd,0.0,v23))
